--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.0",
+    "@types/mongodb": "^3.5.22",
     "@types/node": "^14.0.13",
     "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
@@ -36,6 +38,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "mongodb": "^3.5.9",
     "validator": "^13.1.1"
   }
 }
