--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^26.0.0",
     "@types/mongodb": "^3.5.22",
     "@types/node": "^14.0.13",
+    "@types/supertest": "^2.0.9",
     "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "eslint": "^7.2.0",
@@ -36,6 +37,7 @@
     "jest": "^26.0.1",
     "lint-staged": "^10.2.10",
     "sucrase": "^3.15.0",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5"
   },
